fix: :ambulance: Fix barely overflow

--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ a{
 button {
     cursor: pointer;
     position: relative;
-    padding:  .2em .2em;
+    padding:  .2em 2em;
     display: flex;
     justify-content: center;
     font-size: 0.8em;
@@ -238,7 +238,7 @@ button {
     display: grid;
     gap:1.5em;
     grid-template-columns:100%;
-    grid-template-rows:  repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-rows:  repeat(auto-fill, minmax(100px, 1fr));
 }
 
 .car-item{
@@ -256,6 +256,8 @@ button {
     align-content: center;
     width: 10%;
     height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .car-img img{
@@ -275,6 +277,10 @@ button {
     font-size: 3em;
 }
 
+#car-item-name{
+    overflow: hidden;
+    inline-size: 200px;
+}
 /* #endregion carGrid */
 
 /* #region car */
@@ -301,6 +307,7 @@ button {
     .car-total{
         display: flex;
         gap: 1em;
+
     }
 
     #nothing{
@@ -309,3 +316,10 @@ button {
         padding: .8em;
     }
 /* #endregion car */
+
+@media (width < 700px){
+    .text-menu{
+        display: none;
+        opacity: 0;
+    }
+}
